--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@ transform: scale(1.1);
 
         
 <button id="phone-gif" aria-label="Start Videos">
-  <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/pressplay1.gif" alt="Start Videos" />
+  <img src="pressplay.webm" alt="Start Videos" />
 </button>
     
 <div id="video-feed" class="hidden">
