--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@ transform: scale(1.1);
 
         
 <button id="phone-gif" aria-label="Start Videos">
-  <img src="pressplay.webm" alt="Start Videos" />
+  <video src="pressplay.webm" autoplay loop muted playsinline alt="Start Videos"></video>
 </button>
     
 <div id="video-feed" class="hidden">
