--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@ transform: scale(1.1);
 <img id="smileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/smilegif.gif" alt="Smile" class="Smile" />
 <img id="smileimage2" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/smilegif.gif" alt="Smile2" class="Smile2" />
 <img id="facegif" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/facegif.gif" alt="Face" class="Face" />
-<img id="startwist" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/startwist7.gif" alt="Star Twist" class="StarT" />
+<img id="startwist" src="startwist3.webm" alt="Star Twist" class="StarT" />
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 <img src="computer.gif" alt="Animated Computer" class="computer-gif" />
