--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@ transform: scale(1.1);
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 <img src="computer.gif" alt="Animated Computer" class="computer-gif" />
 
-<img id="bigsmileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/bigsmilegif1.gif" alt="Big Smile" class="Big-smile" onclick="alert('you are here. scroll down.')" />
+<img id="bigsmileimage" src="bigsmile3.webm" alt="Big Smile" class="Big-smile" onclick="alert('you are here. scroll down.')" />
 
 <div class="custom-text">hello? welcome. scroll down. </div>
 <div class="custom1-text">scroll down</div>
