--- a/index.html
+++ b/index.html
@@ -1535,15 +1535,29 @@ transform: scale(1.1);
 
 <img id="imageToToggle" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/album1.png" alt="Image" onclick="toggleImage()" class="resized-image" />
 
-<img id="smileimage" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/smilegif.gif" alt="Smile" class="Smile" />
-<img id="smileimage2" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/smilegif.gif" alt="Smile2" class="Smile2" />
+<video id="smileimage" class="Smile" autoplay loop muted playsinline>
+  <source src="smile.webm" type="video/webm" />
+  Your browser does not support the video tag.
+</video>
+
+<video id="smileimage2" class="Smile2" autoplay loop muted playsinline>
+  <source src="smile.webm" type="video/webm" />
+  Your browser does not support the video tag.
+</video>
+
 <img id="facegif" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/facegif.gif" alt="Face" class="Face" />
-<img id="startwist" src="startwist3.webm" alt="Star Twist" class="StarT" />
+<video id="startwist" class="StarT" autoplay loop muted playsinline>
+  <source src="startwist3.webm" type="video/webm" />
+  Your browser does not support the video tag.
+</video>
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 <img src="computer.gif" alt="Animated Computer" class="computer-gif" />
 
-<img id="bigsmileimage" src="bigsmile3.webm" alt="Big Smile" class="Big-smile" onclick="alert('you are here. scroll down.')" />
+<video id="bigsmileimage" class="Big-smile" autoplay loop muted playsinline onclick="alert('you are here. scroll down.')">
+  <source src="bigsmile3.webm" type="video/webm" />
+  Your browser does not support the video tag.
+</video>
 
 <div class="custom-text">hello? welcome. scroll down. </div>
 <div class="custom1-text">scroll down</div>
