--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,10 @@ transform: scale(1.1);
   Your browser does not support the video tag.
 </video>
 
-<img id="facegif" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/facegif.gif" alt="Face" class="Face" />
+<video id="facegif" autoplay loop muted playsinline>
+  <source src="face.webm" type="video/webm" />
+  Your browser does not support the video tag.
+</video>
 <video id="startwist" class="StarT" autoplay loop muted playsinline>
   <source src="startwist3.webm" type="video/webm" />
   Your browser does not support the video tag.
