--- a/index.html
+++ b/index.html
@@ -1557,10 +1557,7 @@ transform: scale(1.1);
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 <img src="computer.gif" alt="Animated Computer" class="computer-gif" />
 
-<video id="bigsmileimage" class="Big-smile" autoplay loop muted playsinline onclick="alert('you are here. scroll down.')">
-  <source src="bigsmile3.webm" type="video/webm" />
-  Your browser does not support the video tag.
-</video>
+<img id="bigsmileimage" src="bigsmilegif1NEW.png" alt="Big Smile" class="Big-smile" onclick="alert('you are here. scroll down.')" />
 
 <div class="custom-text">hello? welcome. scroll down. </div>
 <div class="custom1-text">scroll down</div>
