--- a/index.html
+++ b/index.html
@@ -1535,24 +1535,10 @@ transform: scale(1.1);
 
 <img id="imageToToggle" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/album1.png" alt="Image" onclick="toggleImage()" class="resized-image" />
 
-<video id="smileimage" class="Smile" autoplay loop muted playsinline>
-  <source src="smile.webm" type="video/webm" />
-  Your browser does not support the video tag.
-</video>
-
-<video id="smileimage2" class="Smile2" autoplay loop muted playsinline>
-  <source src="smile.webm" type="video/webm" />
-  Your browser does not support the video tag.
-</video>
-
-<video id="facegif" autoplay loop muted playsinline>
-  <source src="face.webm" type="video/webm" />
-  Your browser does not support the video tag.
-</video>
-<video id="startwist" class="StarT" autoplay loop muted playsinline>
-  <source src="startwist3.webm" type="video/webm" />
-  Your browser does not support the video tag.
-</video>
+<img id="smileimage" src="smilegif.gif" alt="Smile" class="Smile" />
+<img id="smileimage2" src="smilegif.gif" alt="Smile2" class="Smile2" />
+<img id="facegif" src="facegif-ezgif.com-optipng.png" alt="Face" class="Face" />
+<img id="startwist" src="startwist7.gif" alt="Star Twist" class="StarT" />
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 <img src="computer.gif" alt="Animated Computer" class="computer-gif" />
