--- a/index.html
+++ b/index.html
@@ -1535,8 +1535,8 @@ transform: scale(1.1);
 
 <img id="imageToToggle" src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/album1.png" alt="Image" onclick="toggleImage()" class="resized-image" />
 
-<img id="smileimage" src="smilegif.gif" alt="Smile" class="Smile" />
-<img id="smileimage2" src="smilegif.gif" alt="Smile2" class="Smile2" />
+<img id="smileimage" src="gifs/smilegif.gif" alt="Smile" class="Smile" />
+<img id="smileimage2" src="gifs/smilegif.gif" alt="Smile2" class="Smile2" />
 <img id="facegif" src="facegif-ezgif.com-optipng.png" alt="Face" class="Face" />
 <img id="startwist" src="startwist7.gif" alt="Star Twist" class="StarT" />
 
