--- a/index.html
+++ b/index.html
@@ -1284,13 +1284,13 @@ border: double
 
 #phone-gif {
   position: absolute;
-  top: -2083px;
-  right: 338px;
-  width: 215px; /* Or whatever final size you want */
+  top: -2061px;
+  right: 89px;
+  width: 474px; /* Or whatever final size you want */
   cursor: pointer;
   z-index: 9999;
   background: none;
-  border: none;
+  border:;
   padding: 0;
   transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
