--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@ transform: scale(1.1);
 <img id="smileimage" src="gifs/smilegif.gif" alt="Smile" class="Smile" />
 <img id="smileimage2" src="gifs/smilegif.gif" alt="Smile2" class="Smile2" />
 <img id="facegif" src="facegif-ezgif.com-optipng.png" alt="Face" class="Face" />
-<img id="startwist" src="startwist7.gif" alt="Star Twist" class="StarT" />
+<img id="startwist" src="gifs/startwist7.gif" alt="Star Twist" class="StarT" />
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Trollface.png" alt="troll" class="trollface" />
 <img src="computer.gif" alt="Animated Computer" class="computer-gif" />
