--- a/index.html
+++ b/index.html
@@ -1290,6 +1290,7 @@ border: double
   cursor: pointer;
   z-index: 9999;
   background: none;
+  border: none;
   padding: 0;
   transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
