--- a/index.html
+++ b/index.html
@@ -1570,7 +1570,7 @@ transform: scale(1.1);
     
 <div id="video-feed" class="hidden">
     <div class="video-container">
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/gifs/scrolldown.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="gifs/scrolldown.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
