--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@ transform: scale(1.1);
   </div>
     <div class="video-container">
     <div class="video-title">Maximiliano - Forget My Name</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/tangodance%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/tangodance.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1588,7 +1588,7 @@ transform: scale(1.1);
   </div>
   <div class="video-container">
   <div class="video-title">Olelujah - Zen, Robotics & Consciousness</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/;)%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/;)%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1597,7 +1597,7 @@ transform: scale(1.1);
   </div>
 <div class="video-container">
 <div class="video-title">Laconic - Big Dawg</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/bigdawg%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/bigdawg%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
