--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@ transform: scale(1.1);
   </div>
   <div class="video-container">
   <div class="video-title">Olelujah - Zen, Robotics & Consciousness</div>
-    <video src="Clips/;)%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/;).mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
