--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@ transform: scale(1.1);
   </div>
       <div class="video-container">
       <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/T_clip2%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/T_clip2.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1615,7 +1615,7 @@ transform: scale(1.1);
   </div>
   <div class="video-container">
   <div class="video-title">Michelle Acid - You N Me</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/youme.%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/youme..mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1624,7 +1624,7 @@ transform: scale(1.1);
   </div>
       <div class="video-container">
     <div class="video-title">Michelle Acid - Orange</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/O_clip2%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/O_clip2.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1633,7 +1633,7 @@ transform: scale(1.1);
   </div>
 <div class="video-container">
     <div class="video-title">Michelle Acid - You N Me</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/y0456%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/y0456.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1642,7 +1642,7 @@ transform: scale(1.1);
   </div>
       <div class="video-container">
       <div class="video-title">Michelle Acid - Wink</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/slime45%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/slime45.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1651,7 +1651,7 @@ transform: scale(1.1);
   </div>
       <div class="video-container">
           <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/Clips/first0%20.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/first0.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
