--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html, body {
                 font-family: "Xolonium", sans-serif; /* Use Xolonium font */
                 margin: 0;
                 padding: 0;
-                height: 98vh; /* Full viewport height */
+                height: 100vh; /* Full viewport height */
                 display: flex; /* Enable flexbox */
                 justify-content: center; /* Horizontally center content */
                 align-items: center; /* Vertically center content */
@@ -38,8 +38,8 @@ html, body {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100lvw;
-            height: 100dvh;
+            width: 100vw;
+            height: 100%;
             background-color: black; /* Ensures a smooth transition */
             display: flex;
             align-items: center;
