--- a/index.html
+++ b/index.html
@@ -1658,6 +1658,68 @@ transform: scale(1.1);
       <button class="fullscreen-toggle">⛶</button>
     </div>
   </div>
+
+    <div class="video-container">
+    <video src="gifs/0009555_1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
+    <video src="gifs/ame004).mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
+    <div class="video-title">Michelle Acid - Orange</div>
+    <video src="gifs/O5567.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
+    <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
+    <video src="gifs/T_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
+    <div class="video-title">Michelle Acid - Wink</div>
+    <video src="gifs/w0346.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+        <div class="video-container">
+    <div class="video-title">Michelle Acid - Orange</div>
+    <video src="gifs/O_clip1 .mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+        <div class="video-container">
+    <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
+    <video src="gifs/t55555554.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
 </div>
         
 </div>
