--- a/index.html
+++ b/index.html
@@ -1659,7 +1659,7 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <video src="gifs/0009555_1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/0009555_1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1667,7 +1667,7 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <video src="gifs/ame004.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/ame004.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1676,7 +1676,7 @@ transform: scale(1.1);
   </div>
     <div class="video-container">
     <div class="video-title">Michelle Acid - Orange</div>
-    <video src="gifs/O5567.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/O5567.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1685,7 +1685,7 @@ transform: scale(1.1);
   </div>
     <div class="video-container">
     <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="gifs/T_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/T_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1694,7 +1694,7 @@ transform: scale(1.1);
   </div>
     <div class="video-container">
     <div class="video-title">Michelle Acid - Wink</div>
-    <video src="gifs/w0346.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/w0346.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1703,7 +1703,7 @@ transform: scale(1.1);
   </div>
         <div class="video-container">
     <div class="video-title">Michelle Acid - Orange</div>
-    <video src="gifs/O_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/O_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1712,7 +1712,7 @@ transform: scale(1.1);
   </div>
         <div class="video-container">
     <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="gifs/t55555554.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <video src="Clips/t55555554.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
