--- a/index.html
+++ b/index.html
@@ -1462,13 +1462,9 @@ transform: scale(1.1);
 </head>  
 <body>
     
-<div id="loadingScreen">
-  <video autoplay loop muted playsinline>
-    <source src="loading90.webm" type="video/webm">
-    <!-- Optional fallback -->
-    Your browser does not support the video tag.
-  </video>
-</div>
+    <div id="loadingScreen">
+        <img src="loadingggg10.gif" alt="Loading Animation">
+    </div> 
     
 <div id="mobile-warning">
   ⚠️ This site works best on desktop chrome.
