--- a/index.html
+++ b/index.html
@@ -1418,11 +1418,11 @@ transform: scale(1.1);
     position: fixed;
     top: 0;
     left: 1;
-    width: 100%;
+    width: 84%;
     z-index: 9999;
-    border: 0px solid rgba(227, 25, 130, 0.4); /* Subtle pink border */
+    border: 4px solid #e31982; 
     border-radius: 0;
-    padding: 457px;
+    padding: 6px;
   }
 }
 
@@ -1431,11 +1431,11 @@ transform: scale(1.1);
     position: fixed;
     top: 0;
     left: -1;
-    width: 100%;
+    width: 47%;
     z-index: 9999;
-    border: 0px solid rgba(227, 25, 130, 0.36); /* Subtle pink border */
+    border: 4px solid #e31982; /* Subtle pink border */
     border-radius: 0;
-    padding: 212px;
+    padding: 5px;
   }
 }
 .video-title {
