--- a/index.html
+++ b/index.html
@@ -1467,7 +1467,7 @@ transform: scale(1.1);
     </div> 
     
 <div id="mobile-warning">
-  ⚠️ This site works best on desktop chrome.
+  ⚠️ This site works best on desktop.
   <button id="dismiss-btn">×</button>
 </div>
 
