--- a/index.html
+++ b/index.html
@@ -1574,6 +1574,14 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
+    <video src="Clips/acidfutreflyer.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
     <div class="video-title">Maximiliano - Forget My Name</div>
     <video src="Clips/tangodance.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
