--- a/index.html
+++ b/index.html
@@ -1581,6 +1581,24 @@ transform: scale(1.1);
       <button class="fullscreen-toggle">⛶</button>
     </div>
   </div>
+<div class="video-container">
+<div class="video-title">Sam Phillips - Raised on Promises</div>
+    <video src="Clips/rasiedonpromisesmatv.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
+<div class="video-title">Love & Rockets - Resurrection Hex (Deep Dish Luv 'N' Dub Mix)</div>
+    <video src="Clips/luvresfinalmatv.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
     <div class="video-container">
     <div class="video-title">Maximiliano - Forget My Name</div>
     <video src="Clips/tangodance.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
