--- a/index.html
+++ b/index.html
@@ -1566,24 +1566,8 @@ transform: scale(1.1);
     
 <div id="video-feed" class="hidden">
     <div class="video-container">
-    <video src="gifs/scrolldown.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-    <div class="video-container">
+    <div class="video-title">SCROLL DOWN</div>
     <video src="Clips/acidfutreflyer.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-<div class="video-container">
-<div class="video-title">Sam Phillips - Raised on Promises</div>
-    <video src="Clips/rasiedonpromisesmatv.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1593,6 +1577,15 @@ transform: scale(1.1);
     <div class="video-container">
 <div class="video-title">Love & Rockets - Resurrection Hex (Deep Dish Luv 'N' Dub Mix)</div>
     <video src="Clips/luvresfinalmatv.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+    <div class="video-container">
+<div class="video-title">Sam Phillips - Raised on Promises</div>
+    <video src="Clips/rasiedonpromisesmatv.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
