--- a/index.html
+++ b/index.html
@@ -1500,7 +1500,7 @@ transform: scale(1.1);
 
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/FullMoon2010.png" alt="moon" class="moon-image" />
         
-<a href="https://www.tiktok.com/@michellacidtv?is_from_webapp=1&sender_device=pc" target="_blank">
+<a href="https://www.tiktok.com/@michelleacidtv?is_from_webapp=1&sender_device=pc" target="_blank">
 <img src="https://raw.githubusercontent.com/michelleacidtv/michelleacidtv/main/tiktok.png" alt="tiktok" class="tiktokImage" />
 </a>
 <a href="https://www.instagram.com/michelleacidtv/" target="_blank">
