--- a/index.html
+++ b/index.html
@@ -1023,16 +1023,16 @@ html, body {
         .custom-text {
         width: 389px; /* Reduce size for mobile */
         font-size: 19px;
-        right: 23px; /* Adjust position so it's still visible */
-        top: -881%; /* Slightly adjust vertical position */
+        left: -13%;
+        top: -885%; 
     }
 }
         @media screen and (max-width: 844px) and (orientation: landscape) {
         .custom-text {
         width: 392px; /* Reduce size for mobile */
         font-size: 24px;
-        right: -74px; /* Adjust position so it's still visible */
-        top: -500%; /* Slightly adjust vertical position */
+        left: -13%;
+        top: -500%;
     }
 }
 .custom1-text {
