--- a/index.html
+++ b/index.html
@@ -1288,6 +1288,7 @@ border: double
   cursor: pointer;
   z-index: 9998;
   background: none;
+  border: none;
   transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
 #phone-gif.fade-out {
