--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@ border: double
 }
 
 #video-feed {
-  height: 110%;
+  height: 114%;
 position: absolute;
   top: -2301px;    
   left: 50%;
@@ -1199,13 +1199,13 @@ position: absolute;
 height: 100%;
   scroll-snap-align: start;
   position: relative;
-  background: none;
+  background: black;
 }
 video {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  background: #e31982;
+  background: black;
 }           
             
 .video-container:hover .controls {
