--- a/index.html
+++ b/index.html
@@ -1494,14 +1494,7 @@ transform: scale(1.1);
 </button>
     
 <div id="video-feed" class="hidden">
-    <div class="video-container">
-    <video src="gifs/scrolldown.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
+
     <div class="video-container">
     <video src="Clips/acidfutreflyer.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
@@ -1511,8 +1504,8 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <div class="video-title">Maximiliano - Forget My Name</div>
-    <video src="Clips/tangodance.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="video-title">Mulu - Pussycat (PFM Remix)</div>
+    <video src="animateGIT/pusycat.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1528,18 +1521,20 @@ transform: scale(1.1);
       <button class="fullscreen-toggle">⛶</button>
     </div>
   </div>
-<div class="video-container">
-<div class="video-title">Laconic - Big Dawg</div>
-    <video src="Clips/bigdawg.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+
+          <div class="video-container">
+      <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
+    <video src="Clips/T_clip2.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
       <button class="fullscreen-toggle">⛶</button>
     </div>
   </div>
-      <div class="video-container">
-      <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="Clips/T_clip2.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    
+<div class="video-container">
+<div class="video-title">Laconic - Big Dawg</div>
+    <video src="Clips/bigdawg.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1574,8 +1569,8 @@ transform: scale(1.1);
     </div>
   </div>
       <div class="video-container">
-      <div class="video-title">Michelle Acid - Wink</div>
-    <video src="Clips/slime45.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+      <div class="video-title">Basic Channel - Quadrant Dub II</div>
+    <video src="animateGIT/dub.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1583,8 +1578,8 @@ transform: scale(1.1);
     </div>
   </div>
       <div class="video-container">
-          <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="Clips/first0.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+          <div class="video-title">Lemon8 ‎- Pressure</div>
+    <video src="animateGIT/press.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1600,8 +1595,8 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <div class="video-title">Michelle Acid - Orange</div>
-    <video src="Clips/O5567.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="video-title">JX - You Belong To Me (No Respect Remix)</div>
+    <video src="animateGIT/youbelong.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1618,8 +1613,8 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <div class="video-title">Michelle Acid - Wink</div>
-    <video src="Clips/w0346.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="video-title">Mark N-R-G - In My Brain</div>
+    <video src="animateGIT/housem.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
