--- a/index.html
+++ b/index.html
@@ -1542,8 +1542,8 @@ transform: scale(1.1);
     </div>
   </div>
   <div class="video-container">
-  <div class="video-title">Michelle Acid - You N Me</div>
-    <video src="Clips/youme..mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+  <div class="video-title">Koala - Indian Spirits</div>
+    <video src="animateGIT/indian.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1551,8 +1551,8 @@ transform: scale(1.1);
     </div>
   </div>
       <div class="video-container">
-    <div class="video-title">Michelle Acid - Orange</div>
-    <video src="Clips/O_clip2.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="video-title">D.A.V.E. The Drummer - Dig Into The Brain</div>
+    <video src="animateGIT/dig.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1560,8 +1560,8 @@ transform: scale(1.1);
     </div>
   </div>
 <div class="video-container">
-    <div class="video-title">Michelle Acid - You N Me</div>
-    <video src="Clips/y0456.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="video-title">DJ HMC - Phreakin'</div>
+    <video src="animateGIT/hmc.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1622,7 +1622,8 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <video src="Clips/ame004.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="video-title">Fobos Hailey - Angry</div>
+    <video src="animateGIT/maxfubos copy.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1632,15 +1633,6 @@ transform: scale(1.1);
         <div class="video-container">
     <div class="video-title">Michelle Acid - Orange</div>
     <video src="Clips/O_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-        <div class="video-container">
-    <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="Clips/t55555554.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
