--- a/index.html
+++ b/index.html
@@ -1496,45 +1496,8 @@ transform: scale(1.1);
 <div id="video-feed" class="hidden">
 
     <div class="video-container">
-    <video src="Clips/acidfutreflyer.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-    <div class="video-container">
     <div class="video-title">Mulu - Pussycat (PFM Remix)</div>
     <video src="animateGIT/pusycat.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-  <div class="video-container">
-  <div class="video-title">Olelujah - Zen, Robotics & Consciousness</div>
-    <video src="Clips/booth.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-
-          <div class="video-container">
-      <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="Clips/T_clip2.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-    
-<div class="video-container">
-<div class="video-title">Laconic - Big Dawg</div>
-    <video src="Clips/bigdawg.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1587,25 +1550,8 @@ transform: scale(1.1);
     </div>
   </div>
     <div class="video-container">
-    <video src="Clips/0009555_1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-    <div class="video-container">
     <div class="video-title">JX - You Belong To Me (No Respect Remix)</div>
     <video src="animateGIT/youbelong.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
-    <div class="controls">
-      <button class="mute-toggle">🔇</button>
-      <button class="play-toggle">⏸</button>
-      <button class="fullscreen-toggle">⛶</button>
-    </div>
-  </div>
-    <div class="video-container">
-    <div class="video-title">Michelle Acid - Tokyo (Lovers Mix)</div>
-    <video src="Clips/T_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
@@ -1630,9 +1576,27 @@ transform: scale(1.1);
       <button class="fullscreen-toggle">⛶</button>
     </div>
   </div>
-        <div class="video-container">
-    <div class="video-title">Michelle Acid - Orange</div>
-    <video src="Clips/O_clip1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+  <div class="video-container">
+  <div class="video-title">Olelujah - Zen, Robotics & Consciousness</div>
+    <video src="Clips/booth.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+<div class="video-container">
+<div class="video-title">Laconic - Big Dawg</div>
+    <video src="Clips/bigdawg.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
+    <div class="controls">
+      <button class="mute-toggle">🔇</button>
+      <button class="play-toggle">⏸</button>
+      <button class="fullscreen-toggle">⛶</button>
+    </div>
+  </div>
+<div class="video-container">
+    <div class="video-title">The End</div>
+    <video src="Clips/0009555_1.mp4" type="video/mp4" muted loop playsinline preload="auto" controlsList="nodownload"></video>
     <div class="controls">
       <button class="mute-toggle">🔇</button>
       <button class="play-toggle">⏸</button>
